...
        variant="ghost"
        onPress={onCancel}
        textStyle={{ color: colors.error }}
        style={styles.cancelBtn}
        accessibilityLabel={t({ id: "session.sessionlistfooter.str4", message: "Cancel workout" })}
        label={t({ id: "session.sessionlistfooter.str5", message: "Cancel Workout" })}
        testID="cancel-workout-btn"
      />
    </>
  );
}

const styles = StyleSheet.create({
...
